# OpenInfiniFactory

./: .gitignore  AGENTS.md  Cargo.toml  GOAL.md  README.md  STYLE_GUIDE.rs  TODO.md  Trunk.toml  UI_ARCHITECTURE.md  index.html  todo.md
.cargo/: config.toml
.github/workflows/: deploy-web.yml
assets/i18n/: en.json  zh-CN.json
assets/shaders/: goal_ghost_material.wgsl  scene_block_material.wgsl  sky_material.wgsl
crates/oif-sim/: Cargo.toml
crates/oif-sim-core/: Cargo.toml
crates/oif-sim/src/: lib.rs
crates/oif-sim/src/blocks/: adapter.rs  basic.rs  catalog_store.rs  material_catalog.rs  material_props.rs  mod.rs  paint_catalog.rs  register.rs  registry.rs  scene_catalog.rs  stamp_catalog.rs  traits.rs
crates/oif-sim/src/blocks/blocker/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/converter/: meta.rs  mod.rs
crates/oif-sim/src/blocks/conveyor/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/copper_material/: mod.rs
crates/oif-sim/src/blocks/counter_rotator/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/detector/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/dirt/: mod.rs
crates/oif-sim/src/blocks/down_detector/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/down_welder/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/drill/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/drill_head/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/generator/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/glass_material/: mod.rs
crates/oif-sim/src/blocks/goal/: meta.rs  mod.rs
crates/oif-sim/src/blocks/grass/: mod.rs
crates/oif-sim/src/blocks/iron_material/: mod.rs
crates/oif-sim/src/blocks/laser/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/lifter/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/material/: mod.rs
crates/oif-sim/src/blocks/mirror/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/planks/: mod.rs
crates/oif-sim/src/blocks/platform/: meta.rs  mod.rs
crates/oif-sim/src/blocks/pusher/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/reverse_conveyor/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/roller/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/roller_body/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/rotator/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/sign/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/splitter/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/stamp_material/: mod.rs
crates/oif-sim/src/blocks/stamper/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/stamper_body/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/stone/: mod.rs
crates/oif-sim/src/blocks/suction_cup/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/teleport_entrance/: meta.rs  mod.rs
crates/oif-sim/src/blocks/teleport_exit/: meta.rs  mod.rs
crates/oif-sim/src/blocks/vertical_mirror/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/weld_point/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/welder/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/blocks/wire/: behavior.rs  meta.rs  mod.rs
crates/oif-sim/src/session/: control.rs  log.rs  mod.rs  session.rs
crates/oif-sim/src/simulation/: behaviors.rs  core.rs  gravity.rs  markers.rs  mirror.rs  mod.rs  motion.rs  movement.rs  pending.rs  signals.rs  stats.rs  structure_state.rs  structures.rs  suction.rs
crates/oif-sim/src/world/: direction.rs  grid.rs  mod.rs
crates/oif-sim/src/world/grid/: acceptors.rs  attachments.rs  mod.rs  queries.rs  raycast.rs  settings.rs  teleport.rs
docs/: android-build.md
docs/report/: add_material_block.md  add_scene_block.md  architecture.md  block_behaviors.md  blocks.md  ecs_inventory.md  movement.md  panel.md  reactive_simulation.md  simulation_turn_phases.md  structure_logic.md  system_complexity.md  system_execution_timing.md  test_cases.md  two_phase_save.md
docs/spec/: BLOCK.md  MODE.md  Refactor.md  decorator_system.md  depth_bias.md  panel.md
e2e/: README.md  package.json
e2e/scripts/: debug-pusher-fixture.ts  debug-pusher-turns.ts  generate-fixtures.ts
e2e/src/: blocks.test.ts  client.ts
mobile/android/: settings.gradle
schemas/: material_block.meta.schema.json  paint_material.meta.schema.json  save.meta.schema.json  scene_block.meta.schema.json  stamp_material.meta.schema.json
scripts/: bake_scene_icons.sh  e2e_convert.ts  log_rs_lines.js  package_android.sh  package_linux.sh  package_macos_app.sh  package_web.sh  package_windows.ps1  rust_lines_history.ipynb  scan_rs_files.js
scripts/factory_blocks/: generate_conveyor_glb.py  generate_detector_glb.py  generate_drill_glb.py  generate_lifter_glb.py  generate_light_panel_glb.py  generate_optics_and_suction_glb.py  generate_platform_glb.py  generate_pusher_glb.py  generate_rotator_glb.py  generate_selection_box_glb.py  generate_selection_glb.py  generate_welder_glb.py  generate_wire_glb.py
scripts/material_blocks/: README.md  generate_aluminum_glb.py  generate_face_textures.py  generate_frame_glb.py  generate_gypsum_texture.py  generate_pixel_textures.py
scripts/scene_blocks/: README.md  generate_grass.py  generate_quartz.py  generate_short_grass_and_glass.py
scripts/stamp_materials/: README.md  generate_stamp_glb.py
src/: blocks.rs  config.rs  debug.rs  gameplay.rs  inventory.rs  lib.rs  main.rs  player.rs  rendering.rs  save.rs  simulation.rs  state.rs  world.rs
src/debug_http/: embedded.rs  (+10 more)
types/: block.ts  network.ts  runtime.ts  serialize.ts  structure.ts  todo.md  tsconfig.json
(+740 files in other folders)
