[workspace]
members = [".", "crates/oif-sim"]
resolver = "2"

[package]
name = "open_infinifactory"
version = "0.1.0"
edition = "2021"
default-run = "open_infinifactory"

[lib]
path = "src/lib.rs"

[[bin]]
name = "open_infinifactory"
path = "src/main.rs"

[[bin]]
name = "oif-debug-http"
path = "src/bin/oif-debug-http.rs"
required-features = ["native-tools"]

[[bin]]
name = "export_fixture"
path = "src/bin/export_fixture.rs"
required-features = ["native-tools"]

[dependencies]
bevy = { version = "0.19" }
# Bevy 0.19 / parley 0.9 缺 CJK 分词字典，会刷 ICU4X stderr；logging 特征把 eprintln 转成 log，再过滤掉。
# 见 https://github.com/bevyengine/bevy/issues/24094
icu_provider = { version = "2.2", features = ["logging"] }
inventory = "0.3"
oif-sim = { path = "crates/oif-sim" }
paste = "1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.22"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "IdbFactory",
    "IdbDatabase",
    "IdbOpenDbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbObjectStore",
    "IdbRequest",
    "IdbCursor",
    "IdbCursorWithValue",
    "DomStringList",
    "Event",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tiny_http = "0.12"

[features]
# native-tools：无头调试 / fixture 导出（wasm 打包用 --no-default-features）
default = ["native-tools"]
native-tools = []
webgpu = ["bevy/webgpu"]

[package.metadata.android]
package = "dev.openinfinifactory.prototype"
apk_name = "OpenInfiniFactory"
assets = "assets"
build_targets = ["aarch64-linux-android"]
runtime_libs = "target/android-libs"

[package.metadata.android.application]
label = "OpenInfiniFactory"
theme = "@android:style/Theme.NoTitleBar.Fullscreen"
debuggable = false

# 体积优先的 Release：桌面包明显缩小；全量 LTO 会拉长编译时间
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
