[workspace]
members = [".", "crates/oif-sim-core"]
resolver = "2"

[package]
name = "open_infinifactory"
version = "0.1.0"
edition = "2021"
default-run = "open_infinifactory"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "open_infinifactory"
path = "src/main.rs"

[[bin]]
name = "oif-debug-http"
path = "src/bin/oif-debug-http.rs"

[[bin]]
name = "export_fixture"
path = "src/bin/export_fixture.rs"

[dependencies]
bevy = { version = "0.19" }
# Bevy 0.19 / parley 0.9 缺 CJK 分词字典，会刷 ICU4X stderr；logging 特征把 eprintln 转成 log，再过滤掉。
# 见 https://github.com/bevyengine/bevy/issues/24094
icu_provider = { version = "2.2", features = ["logging"] }
inventory = "0.3"
paste = "1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.22"
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["game-activity"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tiny_http = "0.12"

[features]
default = []
webgpu = ["bevy/webgpu"]

[profile.release]
strip = "debuginfo"

