[workspace]
members = [".", "crates/oif-sim"]
resolver = "2"

[package]
name = "open_infinifactory"
version = "0.1.0"
edition = "2024"
default-run = "oif"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "oif"
path = "src/main.rs"

[[bin]]
name = "oif-debug-http"
path = "src/bin/oif-debug-http.rs"
required-features = ["native-tools"]

[[bin]]
name = "export_fixture"
path = "src/bin/export_fixture.rs"
required-features = ["native-tools"]

[[bin]]
name = "migrate_scene_blocks"
path = "src/bin/migrate_scene_blocks.rs"
required-features = ["native-tools"]

[[bin]]
name = "bake_scene_icons"
path = "src/bin/bake_scene_icons.rs"
required-features = ["native-tools"]

[dependencies]
bevy = { version = "0.19" }
# Bevy 0.19 / parley 0.9 缺 CJK 分词字典，会刷 ICU4X stderr；logging 特征把 eprintln 转成 log，再过滤掉。
# 见 https://github.com/bevyengine/bevy/issues/24094
icu_provider = { version = "2.2", features = ["logging"] }
gltf = "1.4"
inventory = "0.3"
oif-sim = { path = "crates/oif-sim" }
paste = "1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.22"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Storage",
    "IdbFactory",
    "IdbDatabase",
    "IdbOpenDbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbObjectStore",
    "IdbRequest",
    "IdbCursor",
    "IdbCursorWithValue",
    "DomStringList",
    "Event",
] }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["game-activity"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
tiny_http = "0.12"

[features]
# native-tools：无头调试 / fixture 导出（wasm 打包用 --no-default-features）
default = ["native-tools"]
native-tools = []
webgpu = ["bevy/webgpu"]

[profile.release]
strip = "debuginfo"
