[package]
name = "oif-sim"
version = "0.1.0"
edition = "2024"
description = "OpenInfiniFactory simulation core (world, blocks meta/behavior, simulate_turn, session)"

[dependencies]
glam = { version = "0.32", features = ["serde"] }
inventory = "0.3"
paste = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
